<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundBlack"
    tools:context=".ui.addPage.product.AddProductFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="36dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add Product"
                android:textColor="@color/white"
                android:fontFamily="@font/poppinsbold"
                android:textSize="36sp"
                android:gravity="center"
                />
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Product"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppinsbold"
                    android:textSize="14sp"
                    android:gravity="left"
                    />
                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="5dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textSize="12sp"
                        android:fontFamily="@font/poppinssemibold"
                        android:id="@+id/et_product"
                        android:minHeight="0dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Description"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppinsbold"
                    android:textSize="14sp"
                    android:gravity="left"
                    />
                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="5dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textSize="12sp"

                        android:fontFamily="@font/poppinssemibold"
                        android:id="@+id/et_description"
                        android:minHeight="0dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Stock"
                    android:layout_gravity="center"

                    android:textColor="@color/white"
                    android:fontFamily="@font/poppinsbold"
                    android:textSize="14sp"
                    android:gravity="left"
                    />
                <androidx.cardview.widget.CardView
                    app:cardCornerRadius="5dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:inputType="number"
                        android:textSize="12sp"
                        android:fontFamily="@font/poppinssemibold"
                        android:id="@+id/et_stock"
                        android:minHeight="0dp"
                        android:layout_marginHorizontal="5dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >
                <com.google.android.material.textview.MaterialTextView
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Categories"
                    android:layout_gravity="center"

                    android:textColor="@color/white"
                    android:fontFamily="@font/poppinsbold"
                    android:textSize="14sp"
                    android:gravity="left"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Spinner
                        android:id="@+id/spinner_cat"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:visibility="gone"
                android:id="@+id/variant_container"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_weight="2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Variant"
                    android:textColor="@color/white"
                    android:layout_gravity="center"
                    android:fontFamily="@font/poppinsbold"
                    android:textSize="14sp"
                    android:gravity="left"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_weight="1"
                    app:cardCornerRadius="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Spinner
                        android:id="@+id/spinner_var"
                        android:layout_weight="1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_weight="1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Picture"
                    android:textColor="@color/white"
                    android:fontFamily="@font/poppinsbold"
                    android:textSize="14sp"
                    android:gravity="left"
                    />
                <LinearLayout
                    android:layout_weight="2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:src="@drawable/resource_default"
                        android:layout_margin="10dp"
                        android:id="@+id/image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        />
                </androidx.cardview.widget.CardView>
                </LinearLayout>

            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_marginTop="50dp"
                android:id="@+id/insert_btn"
                android:layout_gravity="center"
                app:layout_constraintTop_toBottomOf="@id/container3"
                app:layout_constraintRight_toRightOf="@id/container3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/btn_bg"
                android:text="Insert"
                android:paddingVertical="5dp"
                android:paddingHorizontal="50dp"
                app:cornerRadius="15dp"
                android:textAllCaps="false"
                android:fontFamily="@font/poppinsbold"
                />


        </LinearLayout>
    </ScrollView>

</RelativeLayout>