...
                android:textSize="24sp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:fontFamily="@font/poppinssemibold"
                android:textColor="@color/black"
                />
            <EditText android:id="@+id/username"
                android:fontFamily="@font/poppinsregular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:background="@drawable/edit_text_shadow"
                android:hint="Username"
                android:padding="12dp"
                android:maxLength="20"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:textSize="12sp"
                />
            <EditText android:id="@+id/password"
                android:maxLength="20"
                android:fontFamily="@font/poppinsregular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="Password"
...
                android:padding="12dp"
                android:textColorHint="@color/black"
                android:textColor="@color/black"
                android:textSize="12sp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login"
                android:onClick="login"
                android:textAllCaps="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Login"
                android:textSize="12dp"
...
