<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/backgroundBlack"
    tools:context=".ui.editProduct.EditProductFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/bread_crumb"
        android:paddingLeft="24dp"
        android:backgroundTint="@color/white"
        android:layout_width="wrap_content"
        android:minWidth="250dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:background="@drawable/breadcrumbs_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="Edit Product"
        android:textSize="24sp"
        android:fontFamily="@font/poppinsbold"
        android:drawableLeft="@drawable/clipboard"
        android:paddingVertical="4dp"
        android:drawablePadding="12dp"
        />
    <ScrollView
        app:layout_constraintTop_toBottomOf="@id/bread_crumb"
        android:layout_width="match_parent"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/container1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            >
            <ImageView
                android:id="@+id/image"
                android:layout_margin="12dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                />
        </androidx.cardview.widget.CardView>
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Example"
            android:layout_marginHorizontal="24dp"
            android:fontFamily="@font/poppinsbold"
            android:textSize="24sp"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <androidx.cardview.widget.CardView
        android:id="@+id/container2"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@id/container1"
        android:layout_width="match_parent"
        app:cardCornerRadius="10dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="18dp"
            android:layout_marginVertical="24dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@color/black"
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:text="Category"
                    />
                <TextView
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:text=":"
                    />
                <TextView
                    android:id="@+id/category_tv"
                    android:textColor="@color/black"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinssemibold"
                    android:text="Example"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@color/black"
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:text="Variants"
                    />
                <TextView
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:text=":"
                    />
                <TextView
                    android:id="@+id/variant"
                    android:textColor="@color/black"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinssemibold"
                    android:text="Example"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:textColor="@color/black"
                    android:layout_weight="3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppinsbold"
                    android:text="Description :"
                    />
            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.core.widget.NestedScrollView
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="50dp">
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/description_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="Example Text"
                        android:textSize="14sp"
                        android:fontFamily="@font/poppinsregular"
                        />
                </androidx.core.widget.NestedScrollView>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/container3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/container2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginHorizontal="15dp"
        android:orientation="horizontal">
        <com.google.android.material.textview.MaterialTextView
            android:layout_marginHorizontal="14dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Stock"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinsbold"
            />
        <ImageView
            android:layout_gravity="center"
            android:id="@+id/minus_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ei_minus"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
        <EditText
            android:inputType="number"
            android:id="@+id/stock_count"
            android:gravity="center"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginHorizontal="14dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1000"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinsbold"
            />

        <ImageView
            android:layout_gravity="center"
            android:id="@+id/add_button"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/plus_btn"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </LinearLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_btn"
        app:layout_constraintTop_toBottomOf="@id/container3"
        app:layout_constraintRight_toRightOf="@id/container3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/btn_bg"
        android:text="Save"
        app:cornerRadius="20dp"
        android:fontFamily="@font/poppinsbold"
        android:textAllCaps="false"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_btn"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/save_btn"
        app:layout_constraintRight_toRightOf="@id/container3"
        android:paddingHorizontal="36dp"
        android:paddingVertical="6dp"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/pen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#D3FCFF"
        android:text="Edit"
        app:cornerRadius="20dp"
        android:fontFamily="@font/poppinsbold"
        />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>