...
                        android:backgroundTint="@color/electronics"/>
                    <com.google.android.material.textview.MaterialTextView
                        android:layout_marginLeft="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppinsbold"
                        android:text="Electronics"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.cardview.widget.CardView
...
            <Button
                android:id="@+id/btn_add"
                app:layout_constraintBottom_toBottomOf="parent"
                android:fontFamily="@font/poppinsbold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add"
                android:gravity="left"
                android:textSize="18sp"
                android:paddingHorizontal="32dp"
                android:drawablePadding="25dp"
                android:backgroundTint="#EFD6FF"
                android:textColor="@color/black"
...
